fix some spacing issue

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -59,13 +59,16 @@ button:hover {
     margin-bottom: 2px;
     margin-left: 4px;
     margin-right: 4px;
-    padding-left: 8px;
-    padding-right: 1px;
+    padding-left: 0px;
+    padding-right: 10px;
     background: rgba(0, 0, 0, 0.1);
     border-radius: 0px;
 }
 
-
+/* Add extra spacing between right modules */
+.modules-right > widget:not(:first-child) > * {
+    margin-left: 8px;
+}
 
 #clock {
     color: @maroon;
@@ -111,17 +114,13 @@ button:hover {
     /* Inherits base module styling */
 }
 
-/* Add extra spacing between right modules */
-.modules-right > widget:not(:first-child) > * {
-    margin-left: 10px;
-}
 
 /* If workspaces is the leftmost module, omit left margin */
 .modules-left > widget:first-child > #workspaces {
     margin-left: 0;
 }
 
-/* If workspaces is the rightmost module, omit right margin */
-.modules-right > widget:last-child > #workspaces {
-    margin-right: 0;
+/* Add margin to the rightmost module */
+.modules-right > widget:last-child > * {
+    margin-right: 8px;
 }
